--- a/lesson1_rulebased.ipynb
+++ b/lesson1_rulebased.ipynb
@@ -83,17 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing:\n",
+      "3 -> 8\n",
+      "CORRECT\n",
+      "-4 -> 15\n",
+      "CORRECT\n",
+      "6.5 -> 41.25\n",
+      "CORRECT\n",
+      "0 -> -1\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1. Define a function called \"square_minus_1\" that takes one variable (x), \n",
     "# squares it, subtracts 1, and returns the result.\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "\n",
-    "\n",
+    "def square_minus_1(x):\n",
+    "    return x**2-1;\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -123,9 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing:\n",
+      "computer -> false\n",
+      "INCORRECT\n",
+      "science -> false\n",
+      "INCORRECT\n",
+      "lesson -> true\n",
+      "INCORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2. Define a function called \"contains_ss\" that takes one variable (word) \n",
     "# and returns True if the word contains a double-s and False if it doesn't.\n",
@@ -134,7 +164,12 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "\n",
+    "def contains_ss(word):\n",
+    "    if \"ss\" in word:\n",
+    "        return \"true\"\n",
+    "    else:\n",
+    "        return \"false\"\n",
+    "    \n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing:\")\n",
@@ -176,9 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing:\n",
+      "77 -> C\n",
+      "CORRECT\n",
+      "80 -> B\n",
+      "CORRECT\n",
+      "32 -> F\n",
+      "CORRECT\n",
+      "100 -> A\n",
+      "CORRECT\n",
+      "69 -> D\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3. Define a function called \"grade\" that takes one input (score).\n",
     "# If score >= 90, return the string \"A\"\n",
@@ -190,6 +243,19 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
+    "def grade(score):\n",
+    "    if score>=90:\n",
+    "        return \"A\"\n",
+    "    elif score>=80:\n",
+    "        return \"B\"\n",
+    "    elif score>=70:\n",
+    "        return \"C\"\n",
+    "    elif score>=60:\n",
+    "        return \"D\"\n",
+    "    elif score>=50:\n",
+    "        return \"E\"\n",
+    "    else:\n",
+    "        return \"F\"\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -216,22 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
     "    tweet = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "    if ________:\n",
+    "    if \"medicine\" in tweet:\n",
     "        return \"Medical\"\n",
-    "    elif ________:\n",
+    "    elif \"power\" in tweet:\n",
     "        return \"Energy\"\n",
-    "    elif ________:\n",
+    "    elif \"water\" in tweet:\n",
     "        return \"Water\"\n",
-    "    elif ________:\n",
+    "    elif \"milk\" in tweet:\n",
     "        return \"Food\"\n",
     "    else:\n",
     "        return \"None\"\n"
@@ -253,9 +317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_tweets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-7705fe878df3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassify_rb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtweet\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_tweets\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# a list of (tweet, prediction) pairs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow_predictions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_tweets' is not defined"
+     ]
+    }
+   ],
    "source": [
     "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets]  # a list of (tweet, prediction) pairs\n",
     "\n",
@@ -275,12 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def classify_rb_game(tweet):\n",
-    "    # Copy to here the body of the function classify_rb from above\n",
+    "    tweet = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "\n",
+    "    if \"medicine\" in tweet:\n",
+    "        return \"Medical\"\n",
+    "    elif \"power\" in tweet:\n",
+    "        return \"Energy\"\n",
+    "    elif \"water\" in tweet:\n",
+    "        return \"Water\"\n",
+    "    elif \"milk\" in tweet:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n",
     "    pass\n"
    ]
   },
@@ -299,11 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Food\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "food_tweet = \"\"\n",
+    "food_tweet = \"I love milk\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet))\n"
    ]
   },
@@ -316,11 +412,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Energy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "energy_tweet = \"\"\n",
+    "energy_tweet = \"Power can help the world\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet))\n"
    ]
   },
@@ -333,11 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Water\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "water_tweet = \"\"\n",
+    "water_tweet = \"Water is the source of life\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet))\n"
    ]
   },
@@ -350,11 +464,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Medical\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "medical_tweet = \"\"\n",
+    "medical_tweet = \"Medicine helps us getting better when we are sick\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet))\n"
    ]
   },
@@ -377,11 +500,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Food\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "not_food_tweet = \"\"\n",
+    "not_food_tweet = \"Milky way is beautiful\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_food_tweet))\n"
    ]
   },
@@ -394,11 +526,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Energy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "not_energy_tweet = \"\"\n",
+    "not_energy_tweet = \"I am out of power\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_energy_tweet))\n"
    ]
   },
@@ -411,11 +552,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Water\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "not_water_tweet = \"\"\n",
+    "not_water_tweet = \"I love watermelon\"\n",
     "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_water_tweet))\n"
    ]
   },
@@ -428,33 +578,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tweet is classified as: Medical\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "not_medical_tweet = \"skdfjmedicinesjwjer\"\n",
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "not_medical_tweet = \"\"\n",
-    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
