--- a/lesson2_evaluation.ipynb
+++ b/lesson2_evaluation.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this every time you open the spreadsheet\n",
     "% load_ext autoreload\n",
@@ -23,23 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/piaochuxin/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data.\n",
     "# This function returns \"tweets\" and \"test_tweets\", both lists of tweets\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
     "tweets, test_tweets = lib.read_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
@@ -84,28 +99,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1(a).\n",
     "# Create a list called \"my_numbers\" that contains the numbers from 0 to 6 (inclusive), and then print it\n",
-    "\n",
-    "\n"
+    "my_numbers=[0,1,2,3,4,5,6]\n",
+    "print(my_numbers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1(b).\n",
     "# Now use the range() function to create \"my_numbers\", and print the result.\n",
     "# It should match the previous cell.\n",
     "# Hint: look carefully at the range(10) example above.\n",
-    "\n",
-    "\n"
+    "my_numbers = range(7)\n",
+    "print(my_numbers)\n"
    ]
   },
   {
@@ -133,22 +164,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2. \n",
     "# Write a for-loop that iterates through my_numbers, and prints the square of each number\n",
     "# You should see the following numbers print out, one per line: 0, 1, 4, 9, 16, 25, 36\n",
-    "\n",
-    "\n"
+    "for item in my_numbers:\n",
+    "    print(item**2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: sum_squares = 91\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.\n",
     "# Use a for-loop to calculate the sum of the squares of my_numbers.\n",
@@ -156,7 +210,9 @@
     "# Hint: start by setting sum_squares to 0 before starting the for-loop.\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "sum_squares=0\n",
+    "for item in my_numbers:\n",
+    "    sum_squares+=item**2\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -195,9 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: num_weasleys = 5\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.\n",
     "# Count the number of Weasleys in the list of characters, and save the result to the variable \"num_weasleys\".\n",
@@ -207,7 +272,10 @@
     "              'Fred Weasley', 'George Weasley']\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "num_weasleys=0\n",
+    "for item in characters:\n",
+    "    if \"Weasley\"in item:\n",
+    "        num_weasleys+=1\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -240,9 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: num_cats = 4\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.\n",
     "# Use a for-loop, incrementation and equality testing to count the number of cats in my list of pets. \n",
@@ -251,7 +328,11 @@
     "my_pets = ['cat', 'lizard', 'cat', 'dog', 'cat', 'snake', 'dog', 'cat', 'dog', 'parrot']\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "num_cats=0\n",
+    "for item in my_pets:\n",
+    "    if \"cat\"==item:\n",
+    "        num_cats+=1\n",
+    "       \n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -261,16 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: num_unusual = 3\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.\n",
     "# Use a for-loop, incrementation and inequality testing to count the number of pets that are neither cats nor dogs.\n",
     "# Assign the result to the variable \"num_unusual\".\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "num_unusual=0\n",
+    "for item in my_pets:\n",
+    "    if \"cat\"!=item and \"dog\"!=item:\n",
+    "        num_unusual+=1\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -289,9 +382,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "\n",
+      "Water\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "\n",
+      "Energy\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "\n",
+      "Medical\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "\n",
+      "None\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def evaluate(predictions, c):\n",
     "    \"\"\"This function calculate the precision, recall and F1 for a single category c (e.g. Food)\n",
@@ -313,17 +438,17 @@
     "\n",
     "        # Hint: true positives for category c are tweets that have \n",
     "        # true category c and predicted category c\n",
-    "        if ___________:\n",
+    "        if \"c\"==(tweet,predicted_category) and classify_rb(tweet)==\"c\":\n",
     "            true_positives += 1\n",
     "\n",
     "        # Finish the statement: false negatives for category c are tweets that have \n",
-    "        # true category ___ and predicted category ___\n",
-    "        elif ___________:\n",
+    "        # true category not c and predicted category not c\n",
+    "        elif \"c\"!=(tweet,predicted_category) and classify_rb(tweet)!=\"c\":\n",
     "            false_negatives += 1\n",
     "\n",
     "        # Finish the statement: false positives for category c are tweets that have \n",
-    "        # true category ___ and predicted category ___\n",
-    "        elif ___________:\n",
+    "        # true category c and predicted category not c\n",
+    "        elif \"c\"!=(tweet,predicted_category) and classify_rb(tweet)==\"c\":\n",
     "            false_positives += 1\n",
     "\n",
     "    # Before we calculate Precision, Recall and F1 we need to check whether true_positives = 0. Why?\n",
@@ -334,9 +459,9 @@
     "    else:\n",
     "        # Calculate Precision, Recall and F1\n",
     "        # Consult the formulae on the slides\n",
-    "        precision = ___________\n",
-    "        recall = ___________\n",
-    "        f1 = ___________\n",
+    "        precision = true_positives/(false_positives+true_positives)\n",
+    "        recall = true_positives/(false_negatives+true_positives)\n",
+    "        f1 = 2*precision*recall/(precision+recall)\n",
     "\n",
     "    # Print the category name, Precision, Recall and F1\n",
     "    print(c)\n",
@@ -368,11 +493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average F1:  0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "average_f1 = ___________\n",
+    "average_f1 = (food_f1+water_f1+energy_f1+medical_f1+none_f1)/5\n",
     "print(\"Average F1: \", average_f1)\n"
    ]
   },
@@ -429,7 +562,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
