--- a/lesson4_languagemodel.ipynb
+++ b/lesson4_languagemodel.ipynb
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -28,13 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package movie_reviews to\n",
+      "[nltk_data]     /Users/piaochuxin/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose a corpus: reuters, movie_reviews or shakespeare\n",
+    "import nltk\n",
+    "nltk.download('movie_reviews')\n",
     "corpus = movie_reviews\n",
     "\n",
     "if corpus == shakespeare:\n",
@@ -61,32 +69,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of words in corpus:  1583820\n",
+      "\n",
+      "Top 10 most common words: \n",
+      ", 77717\n",
+      "the 76529\n",
+      ". 65876\n",
+      "a 38106\n",
+      "and 35576\n",
+      "of 34123\n",
+      "to 31937\n",
+      "' 30585\n",
+      "is 25195\n",
+      "in 21822\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1. Fill in the blanks.\n",
     "\n",
     "\n",
     "# Step 1: Make a Counter from the list of words and call it \"unigram_counts\" (remember, this is easy to do!)\n",
-    "......\n",
+    "unigram_counts=Counter(words)\n",
     "\n",
     "# Step 2: Get the total number of words and assign it to \"total_count\"\n",
-    "......\n",
+    "total_count=sum(unigram_counts.values())\n",
     "\n",
     "print(\"Total number of words in corpus: \", total_count)\n",
     "\n",
     "# Print 10 most common words\n",
     "print(\"\\nTop 10 most common words: \")\n",
+    "\n",
     "for (word, count) in unigram_counts.most_common(n=10):\n",
     "    print(word, count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilities sum to:  158382.0000001032\n",
+      "\n",
+      "Top 10 most common words: \n",
+      ", 7771.70000\n",
+      "the 7652.90000\n",
+      ". 6587.60000\n",
+      "a 3810.60000\n",
+      "and 3557.60000\n",
+      "of 3412.30000\n",
+      "to 3193.70000\n",
+      "' 3058.50000\n",
+      "is 2519.50000\n",
+      "in 2182.20000\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2. Fill in the blanks.\n",
     "\n",
@@ -95,28 +144,37 @@
     "\n",
     "\n",
     "# Step 1: create an empty Counter called unigram_probs.\n",
-    "......\n",
+    "unigram_probs={}\n",
     "\n",
     "# Step 2: using a for-loop over unigram_counts, (this will iterate over the keys i.e. words)\n",
     "# calculate the appropriate fraction, and add the word -> fraction pair to unigram_probs.\n",
     "# Remember about integer division!\n",
     "for word in unigram_counts:\n",
-    "    ......\n",
+    "    fraction=float(unigram_counts[word])/10\n",
+    "    unigram_probs[word]=fraction\n",
     "\n",
     "# Check the probabilities add up to 1\n",
     "print(\"Probabilities sum to: \", sum(unigram_probs.values()))\n",
     "\n",
     "# Print 10 most common words\n",
     "print(\"\\nTop 10 most common words: \")\n",
-    "for (word, count) in unigram_probs.most_common(n=10):\n",
+    "for (word, count) in Counter(unigram_probs).most_common(n=10):\n",
     "    print(word, \"%.5f\" % count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7652.9\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the probability of word \"the\", then try some other words.\n",
     "print(unigram_probs['the'])\n"
@@ -124,9 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot plot\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate 100 words of language using the unigram model.\n",
     "# Run this cell several times!\n",
@@ -158,10 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Count how often each bigram occurs.\n",
@@ -176,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8621\n"
+     ]
+    }
+   ],
    "source": [
     "# Print how often the bigram \"of the\" occurs. Try some other words following \"of\".\n",
     "print(bigram_counts['of']['the'])\n"
@@ -186,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Transform the bigram counts to bigram probabilities\n",
@@ -201,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25264484365384055\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the probability that 'the' follows 'of'\n",
     "print(bigram_probs['of']['the'])\n"
@@ -211,9 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", 0.19048\n",
+      "to 0.15238\n",
+      "game 0.10476\n",
+      ". 0.04762\n",
+      "share 0.04762\n",
+      "amount 0.03810\n",
+      "enough 0.03810\n",
+      "bit 0.02857\n",
+      "warning 0.01905\n",
+      "town 0.00952\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the top ten tokens most likely to follow 'fair', along with their probabilities.\n",
     "# Try some other words.\n",
@@ -224,9 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the world than by the violent , after a colonel with characters and a director makes it even the streets for sean dies .\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate text with bigram model.\n",
     "# Run this cell several times!\n",
@@ -267,10 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Count how often each trigram occurs.\n",
@@ -285,9 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "# Print how often the trigram \"I am not\" occurs. Try some other trigrams.\n",
     "print(trigram_counts[('i', 'am')]['not'])\n"
@@ -295,10 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Transform the trigram counts to trigram probabilities\n",
@@ -310,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16363636363636364\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the probability that 'not' follows 'i am'. Try some other combinations.\n",
     "print(trigram_probs[('i', 'am')]['not'])\n"
@@ -320,9 +435,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not 0.16364\n",
+      "a 0.07273\n",
+      "sure 0.07273\n",
+      "the 0.03030\n",
+      "willing 0.02424\n",
+      "going 0.02424\n",
+      ", 0.02424\n",
+      "of 0.01818\n",
+      "glad 0.01818\n",
+      "thinking 0.01212\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the top ten tokens most likely to follow 'i am', along with their probabilities.\n",
     "# Try some other pairs of words.\n",
@@ -333,9 +465,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are still having his own direction .\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate text with trigram model.\n",
     "# Run this cell several times!\n",
@@ -403,7 +543,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
