--- a/lesson6_visualization.ipynb
+++ b/lesson6_visualization.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
@@ -28,11 +26,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking if bigrams are correct...\n",
+      "Bigrams are correct.\n",
+      "\n",
+      "Energy\n",
+      "Precision:  60.0\n",
+      "Recall:  67.5\n",
+      "F1:  63.529411764705884\n",
+      "\n",
+      "Food\n",
+      "Precision:  84.39716312056737\n",
+      "Recall:  92.24806201550388\n",
+      "F1:  88.14814814814815\n",
+      "\n",
+      "Medical\n",
+      "Precision:  75.0\n",
+      "Recall:  46.15384615384615\n",
+      "F1:  57.14285714285714\n",
+      "\n",
+      "None\n",
+      "Precision:  82.66666666666667\n",
+      "Recall:  78.48101265822785\n",
+      "F1:  80.51948051948052\n",
+      "\n",
+      "Water\n",
+      "Precision:  83.33333333333333\n",
+      "Recall:  50.0\n",
+      "F1:  62.5\n",
+      "\n",
+      "Average F1:  70.36797951503834\n"
+     ]
+    }
+   ],
    "source": [
     "def add_bigrams(tweet):\n",
     "# Currently, tweet has an attribute called tweet.tokenList which is a list of tokens.\n",
@@ -42,6 +74,7 @@
     "\n",
     "##### YOUR CODE STARTS HERE #####\n",
     "\n",
+    "    tweet.bigramList = [(tweet.tokenList[i], tweet.tokenList[i + 1]) for i in range(len(tweet.tokenList) - 1)]\n",
     "\n",
     "##### YOUR CODE ENDS HERE #####\n",
     "\n",
@@ -70,9 +103,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Energy\n",
+      "Precision:  60.0\n",
+      "Recall:  67.5\n",
+      "F1:  63.529411764705884\n",
+      "\n",
+      "Food\n",
+      "Precision:  84.39716312056737\n",
+      "Recall:  92.24806201550388\n",
+      "F1:  88.14814814814815\n",
+      "\n",
+      "Medical\n",
+      "Precision:  75.0\n",
+      "Recall:  46.15384615384615\n",
+      "F1:  57.14285714285714\n",
+      "\n",
+      "None\n",
+      "Precision:  82.66666666666667\n",
+      "Recall:  78.48101265822785\n",
+      "F1:  80.51948051948052\n",
+      "\n",
+      "Water\n",
+      "Precision:  83.33333333333333\n",
+      "Recall:  50.0\n",
+      "F1:  62.5\n",
+      "\n",
+      "Average F1:  70.36797951503834\n"
+     ]
+    }
+   ],
    "source": [
     "tweets, test_tweets = lib.read_data()\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
@@ -95,9 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOST DISCRIMINATIVE TOKENS: \n",
+      "\n",
+      "TOKEN                P(Energy|token)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to bytes.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-e276dd8435c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_discriminative\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprior_probs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Downloads/sailors2017-master/lib.py\u001b[0m in \u001b[0;36mmost_discriminative\u001b[0;34m(tweets, token_probs, prior_probs)\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0:20} {1:10}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"TOKEN\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"P(%s|token)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0:20} {1:.4f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to bytes.__format__"
+     ]
+    }
+   ],
    "source": [
     "lib.most_discriminative(tweets, token_probs, prior_probs)\n"
    ]
@@ -118,9 +206,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Energy</th>\n",
+       "      <th>Food</th>\n",
+       "      <th>Medical</th>\n",
+       "      <th>None</th>\n",
+       "      <th>Water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Energy</th>\n",
+       "      <td>27</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Food</th>\n",
+       "      <td>2</td>\n",
+       "      <td>119</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medical</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>None</th>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "lib.show_confusion_matrix(predictions)\n"
    ]
@@ -140,9 +294,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div id=\"viz-overlay\" style=\"display:none;position:absolute;width:250px;height:110px;border: 1px solid #000; padding:8px;  background: #eee;\">\n",
+       "\t<p>\n",
+       "       <span style=\"color:orange;\">P(<span class=\"viz-token-placeholder\"></span> | food) = <span id=\"viz-p-food\"></span></span><br>\n",
+       "\t   <span style=\"color:blue;\">P(<span class=\"viz-token-placeholder\"></span> | water) = <span id=\"viz-p-water\"></span><br>\n",
+       "\t   <span style=\"color:green;\">P(<span class=\"viz-token-placeholder\"></span> | medical) = <span id=\"viz-p-medical\"></span><br>\n",
+       "\t   <span style=\"color:red;\">P(<span class=\"viz-token-placeholder\"></span> | energy) = <span id=\"viz-p-energy\"></span><br>\n",
+       "\t   <span style=\"color:gray;\">P(<span class=\"viz-token-placeholder\"></span> | none) = <span id=\"viz-p-none\"></span></p>\n",
+       "    </p>\n",
+       "    </div>\n",
+       "\n",
+       "    <div id=\"viz-tweet\" style=\"padding: 190px 0 0;\">\n",
+       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">non-perishaable</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.708333\" data-none=\"0.213592\" data-medical=\"0.000000\" data-energy=\"0.021739\" data-water=\"0.049505\">food</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.623106\" data-none=\"0.161812\" data-medical=\"0.590909\" data-energy=\"0.485507\" data-water=\"0.445545\">,</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.081439\" data-none=\"0.012945\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.019802\">hot</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.064394\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.007246\" data-water=\"0.009901\">meals</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.623106\" data-none=\"0.161812\" data-medical=\"0.590909\" data-energy=\"0.485507\" data-water=\"0.445545\">,</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.145833\" data-none=\"0.032362\" data-medical=\"0.090909\" data-energy=\"0.079710\" data-water=\"0.059406\">or</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.125000\" data-none=\"0.000000\" data-medical=\"0.068182\" data-energy=\"0.057971\" data-water=\"0.059406\">hygiene</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.128788\" data-none=\"0.000000\" data-medical=\"0.090909\" data-energy=\"0.065217\" data-water=\"0.069307\">products</span> <p><strong>Predicted category: </strong> <span style=\"color: orange\"> Food</span><br><strong>True category: </strong> <span style=\"color: orange\"> Food</span></p>\n",
+       "    </div>\n",
+       "     <script type=\"text/javascript\">\n",
+       "\t$(document).ready(function() {\n",
+       "\t\t$(\"span.viz-token\").mouseover(function() {\n",
+       "\t\t\t$(\"span.viz-token\").css({\"font-weight\": \"normal\"});\n",
+       "\t\t\t$(this).css({\"font-weight\": \"bold\"});\n",
+       "\t\t\t$(\"span.viz-token-placeholder\").text($(this).text());\n",
+       "\t\t\t$(\"#viz-p-food\").text($(this).data(\"food\"));\n",
+       "\t\t\t$(\"#viz-p-water\").text($(this).data(\"water\"));\n",
+       "\t\t\t$(\"#viz-p-medical\").text($(this).data(\"medical\"));\n",
+       "\t\t\t$(\"#viz-p-energy\").text($(this).data(\"energy\"));\n",
+       "\t\t\t$(\"#viz-p-none\").text($(this).data(\"none\"));\n",
+       "\t\t\t$(\"#viz-overlay\").show();\n",
+       "\t\t\t$(\"#viz-overlay\").offset({left:$(this).offset().left-110+$(this).width()/2, top:$(this).offset().top - 140});\n",
+       "\t\t});\n",
+       "\t});\n",
+       "    </script>\n",
+       "\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The following code visualizes a random tweet from the test data. \n",
     "# Hover your mouse over the words!\n",
@@ -162,9 +360,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div id=\"viz-overlay\" style=\"display:none;position:absolute;width:250px;height:110px;border: 1px solid #000; padding:8px;  background: #eee;\">\n",
+       "\t<p>\n",
+       "       <span style=\"color:orange;\">P(<span class=\"viz-token-placeholder\"></span> | food) = <span id=\"viz-p-food\"></span></span><br>\n",
+       "\t   <span style=\"color:blue;\">P(<span class=\"viz-token-placeholder\"></span> | water) = <span id=\"viz-p-water\"></span><br>\n",
+       "\t   <span style=\"color:green;\">P(<span class=\"viz-token-placeholder\"></span> | medical) = <span id=\"viz-p-medical\"></span><br>\n",
+       "\t   <span style=\"color:red;\">P(<span class=\"viz-token-placeholder\"></span> | energy) = <span id=\"viz-p-energy\"></span><br>\n",
+       "\t   <span style=\"color:gray;\">P(<span class=\"viz-token-placeholder\"></span> | none) = <span id=\"viz-p-none\"></span></p>\n",
+       "    </p>\n",
+       "    </div>\n",
+       "\n",
+       "    <div id=\"viz-tweet\" style=\"padding: 190px 0 0;\">\n",
+       "    <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.409091\" data-none=\"0.262136\" data-medical=\"0.272727\" data-energy=\"0.260870\" data-water=\"0.306931\">i</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">urgently</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.130682\" data-none=\"0.025890\" data-medical=\"0.136364\" data-energy=\"0.181159\" data-water=\"0.069307\">need</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.094697\" data-none=\"0.016181\" data-medical=\"0.068182\" data-energy=\"0.050725\" data-water=\"0.049505\">some</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.001894\" data-none=\"0.003236\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.207921\">bottled</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.017045\" data-none=\"0.035599\" data-medical=\"0.000000\" data-energy=\"0.028986\" data-water=\"0.881188\">water</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.596591\" data-none=\"0.453074\" data-medical=\"0.477273\" data-energy=\"0.543478\" data-water=\"0.544554\">.</span> <p><strong>Predicted category: </strong> <span style=\"color: blue\"> Water</span><br><strong>True category: </strong> <span style=\"color: black\"> ?</span></p>\n",
+       "    </div>\n",
+       "     <script type=\"text/javascript\">\n",
+       "\t$(document).ready(function() {\n",
+       "\t\t$(\"span.viz-token\").mouseover(function() {\n",
+       "\t\t\t$(\"span.viz-token\").css({\"font-weight\": \"normal\"});\n",
+       "\t\t\t$(this).css({\"font-weight\": \"bold\"});\n",
+       "\t\t\t$(\"span.viz-token-placeholder\").text($(this).text());\n",
+       "\t\t\t$(\"#viz-p-food\").text($(this).data(\"food\"));\n",
+       "\t\t\t$(\"#viz-p-water\").text($(this).data(\"water\"));\n",
+       "\t\t\t$(\"#viz-p-medical\").text($(this).data(\"medical\"));\n",
+       "\t\t\t$(\"#viz-p-energy\").text($(this).data(\"energy\"));\n",
+       "\t\t\t$(\"#viz-p-none\").text($(this).data(\"none\"));\n",
+       "\t\t\t$(\"#viz-overlay\").show();\n",
+       "\t\t\t$(\"#viz-overlay\").offset({left:$(this).offset().left-110+$(this).width()/2, top:$(this).offset().top - 140});\n",
+       "\t\t});\n",
+       "\t});\n",
+       "    </script>\n",
+       "\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "my_tweet = \"I urgently need some bottled water.\"\n",
     "\n",
@@ -201,7 +443,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
