--- a/lesson3_naivebayes_exercises.ipynb
+++ b/lesson3_naivebayes_exercises.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
@@ -25,12 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of balls in box A: 100\n",
+      "Number of balls in box B: 100\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data.\n",
     "# This function returns box_a and box_b, both lists of colors of the balls in each box\n",
@@ -67,11 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CORRECT\n",
+      "CORRECT\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.\n",
     "# Create a dictionary called \"authors\" that maps the following book titles to their authors.\n",
@@ -85,7 +99,8 @@
     "# Then print the author of \"The Catcher in the Rye\" and \"Harry Potter\" using your dictionary.\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "authors={\"Harry Potter\":\"J.K. Rowling\",\"The Casual Vacancy\":\"J.K. Rowling\",\"The Hunger Games\":\"Suzanne Collins\"\n",
+    "         ,\"Never Let Me Go\":\"Kazuo Ishiguro\",\"The Catcher in the Rye\":\"J.D. Salinger\"}\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -167,11 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spaghetti': 2.75, 'milk': 2.25, 'peanut butter': 3.0, 'avocado': 1.1, 'bread': 3.5}\n",
+      "CORRECT\n",
+      "CORRECT\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Imagine you are running a store that sells spaghetti, milk, peanut butter, avocados, and bread, and you\n",
     "# store the prices for these products in the following dictionary.\n",
@@ -186,6 +210,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "for product in prices:\n",
+    "    prices[product]+=0.25\n",
     "    pass\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
@@ -199,11 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spaghetti': 2.75, 'milk': 2.25, 'peanut butter': 3.0, 'avocado': 1.1, 'bread': 3.5, 'bananas': 0.95}\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2(b).\n",
     "\n",
@@ -211,7 +243,7 @@
     "# for bananas to the prices dictionary.\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "prices[\"bananas\"]=0.95\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -221,18 +253,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spaghetti': 2.75, 'milk': 2.25, 'avocado': 1.1, 'bread': 3.5, 'bananas': 0.95}\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2(c).\n",
     "\n",
     "# You are no longer selling peanut butter. Remove the entry for peanut butter from prices.\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "del prices[\"peanut butter\"]\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -272,11 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.\n",
     "# Write code that counts how many of each type of fruit there are in the fruit basket. \n",
@@ -289,6 +333,10 @@
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
+    "for fruit in fruit_basket:\n",
+    "    fruit_counter=Counter()\n",
+    "    fruit_counter[fruit]+=1\n",
+    "    print(fruit_counter[fruit])\n",
     "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
@@ -312,11 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'apple': 4, 'apricot': 3, 'plum': 2, 'banana': 1})\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.\n",
     "# Re-implement the program from Exercise 3 without using a for-loop.\n",
@@ -326,7 +380,8 @@
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
+    "fruit_counter=Counter(fruit_basket)\n",
+    "print (fruit_counter)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -370,11 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('1 queen-sized bed', 25), ('1 king-sized bed', 14), ('2 queen-sized beds', 12), ('Honeymoon suite', 1), ('Presidential suite', 1)])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 6.\n",
     "\n",
@@ -389,6 +453,7 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
+    "hotel_rooms.items()\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -430,11 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6(a).\n",
     "# Compute the sum of all numbers from 1 to 10 and assign to the variable \"total\"\n",
@@ -442,7 +514,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "numbers = list(range(1, 11))\n",
-    "total = ...\n",
+    "total =sum(numbers)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -452,11 +524,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'cat': 4, 'dog': 3, 'lizard': 1, 'snake': 1, 'parrot': 1})\n",
+      "dict_values([4, 1, 3, 1, 1])\n",
+      "10\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6(b).\n",
     "# Store the counts of each type of pet in a Counter and use that counter to compute the total number of pets.\n",
@@ -466,9 +547,9 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "pet_counter = ...\n",
-    "\n",
-    "total = ...\n",
+    "pet_counter = Counter(my_pets)\n",
+    "vals = pet_counter.values()\n",
+    "total = sum(vals)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -509,11 +590,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n",
+      "2.5\n",
+      "3.0\n",
+      "3.5\n",
+      "4.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.\n",
     "# Divide each number in the following list by 2 and print it.\n",
@@ -523,7 +614,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "for number in numbers:\n",
-    "    ......\n",
+    "    print(number/2)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -532,12 +623,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: fraction of cats = 0.4\n",
+      "CORRECT\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 8.\n",
     "# Compute the fraction of each type of animal (e.g., the fraction of lizards = 1/10 = 0.1) \n",
@@ -547,6 +646,12 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
+    "pet_counter=Counter(my_pets)\n",
+    "fractions={}\n",
+    "for pet in pet_counter:\n",
+    "    fraction=float(pet_counter[pet])/10\n",
+    "    fractions[pet]=fraction\n",
+    "    \n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -571,15 +676,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'blue': 39, 'green': 27, 'orange': 23, 'red': 10, 'yellow': 1})\n",
+      "Counter({'red': 53, 'yellow': 25, 'green': 9, 'orange': 8, 'blue': 5})\n"
+     ]
+    }
+   ],
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "\n",
+    "a_counter=Counter(box_a)\n",
+    "b_counter=Counter(box_b)\n",
+    "print(a_counter)\n",
+    "print(b_counter)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####"
    ]
@@ -597,22 +712,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'blue': 0.39, 'green': 0.27, 'red': 0.1, 'orange': 0.23, 'yellow': 0.01}\n",
+      "{'blue': 0.05, 'green': 0.09, 'red': 0.53, 'orange': 0.08, 'yellow': 0.25}\n"
+     ]
+    }
+   ],
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "# Hint: This is very similar to Exercise 8.\n",
     "\n",
-    "p_box_a = ...\n",
-    "p_box_b = ...\n",
+    "sum_a=sum(a_counter.values())\n",
+    "sum_b=sum(b_counter.values())\n",
     "\n",
-    "...\n",
-    "...\n",
-    "...\n",
+    "p_box_a={}\n",
+    "p_box_b={}\n",
+    "for color in a_counter:\n",
+    "    prob=float(a_counter[color])/sum_a\n",
+    "    p_box_a[color] = prob\n",
+    "    \n",
+    "for color in a_counter:\n",
+    "    prob=float(b_counter[color])/sum_b\n",
+    "    p_box_b[color] = prob\n",
+    "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -633,11 +762,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balls in Box A:\n",
+      "Counter({'blue': 39, 'green': 27, 'orange': 23, 'red': 10, 'yellow': 1})\n",
+      "Balls in Box B:\n",
+      "Counter({'red': 53, 'yellow': 25, 'green': 9, 'orange': 8, 'blue': 5})\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'dict' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-96-48eddd7972de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcolors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"A %s ball most likely came from %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlikeliest_box\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-96-48eddd7972de>\u001b[0m in \u001b[0;36mlikeliest_box\u001b[0;34m(color)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# P(box A | color) is proportional to P(color | box A) * P(box A)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Hint use the prior_box_a variable and the p_box_a counter from the cell above.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mp_box_a_color\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_box_a\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mprior_box_a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mp_box_b_color\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_box_b\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mprior_box_b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
@@ -650,13 +801,14 @@
     "\n",
     "    # P(box A | color) is proportional to P(color | box A) * P(box A)\n",
     "    # Hint use the prior_box_a variable and the p_box_a counter from the cell above.\n",
-    "    p_box_a_color = ...\n",
-    "    p_box_b_color = ...\n",
+    "    for \n",
+    "    p_box_a_color = p_box_a*prior_box_a\n",
+    "    p_box_b_color = p_box_b*prior_box_b\n",
     "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement\n",
     "    # such that likely_box is assigned Box A if the ball came most likely from Box A\n",
     "    # and Box B if it most likely came from the other box.\n",
-    "    if __________________:\n",
+    "    if p_box_a_color>=p_box_b_color:\n",
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
@@ -841,7 +993,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
